--- a/devsearch/templates/projects.html
+++ b/devsearch/templates/projects.html
@@ -13,7 +13,7 @@
 
             <h1>Projects template</h1>
         
-        {% endblock content %}
+        {% endblock %}
     
 </body>
 </html>
