--- a/devsearch/projects/templates/projects/project.html
+++ b/devsearch/projects/templates/projects/project.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Project template</h1>
+    {% extends 'main.html' %}
+
+        {% block content %}
+
+            <h1>Project template content</h1>
+        
+        {% endblock %}
 </body>
 </html>
