--- a/devsearch/projects/templates/projects/projects.html
+++ b/devsearch/projects/templates/projects/projects.html
@@ -11,7 +11,7 @@
 
         {% block content %}
 
-            <h1>Projects template</h1>
+            <h1>{{ message }}</h1>
         
         {% endblock %}
     
