Updated multiple views and added more vars

--- a/devsearch/projects/templates/projects/project.html
+++ b/devsearch/projects/templates/projects/project.html
@@ -11,8 +11,8 @@
 
         {% block content %}
 
-            <h1>Project template content</h1>
-        
+            <h1>{{ project.title }}</h1>
+            <H2>{{ project.description }}</H2>
         {% endblock %}
 </body>
 </html>
