Updated layout and data sources

--- a/devsearch/projects/templates/projects/project.html
+++ b/devsearch/projects/templates/projects/project.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    {% extends 'main.html' %}
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        {% extends 'main.html' %}
 
-        {% block content %}
+            {% block content %}
 
-            <h1>{{ project.title }}</h1>
-            <H2>{{ project.description }}</H2>
-        {% endblock %}
-</body>
+                <h1>Title: {{ project_obj.title }}</h1>
+                <H2>Date Created: {{ project_obj.created }}</H2>
+            
+                {% for tag in tags %}
+                    <span>{{ tag }}</span>
+                {% endfor %}
+            
+            {% endblock %}
+
+    </body>
 </html>
