Added form context to page

--- a/devsearch/projects/templates/projects/project-form.html
+++ b/devsearch/projects/templates/projects/project-form.html
@@ -5,6 +5,8 @@
 
 <form method="POST">
     {% csrf_token %}
+    <!-- as_p will wrap each label+form in a p tage to help tidy it up -->
+    {{ form.as_p }}
     <input type="submit">
 </form>
 
