Updated button text on form input button

--- a/devsearch/projects/templates/projects/project-form.html
+++ b/devsearch/projects/templates/projects/project-form.html
@@ -7,7 +7,7 @@
     {% csrf_token %}
     <!-- as_p will wrap each label+form in a p tage to help tidy it up -->
     {{ form.as_p }}
-    <input type="submit">
+    <input type="submit" value="Submit">
 </form>
 
 {% endblock content %}
