Added image tag

--- a/devsearch/projects/templates/projects/project.html
+++ b/devsearch/projects/templates/projects/project.html
@@ -11,6 +11,8 @@
 
             {% block content %}
 
+                <img src={{ project_obj.featured_image.url }}>
+
                 <h1>Title: {{ project_obj.title }}</h1>
                 <H2>Date Created: {{ project_obj.created }}</H2>
             
