--- a/devsearch/projects/templates/projects/project-form.html
+++ b/devsearch/projects/templates/projects/project-form.html
@@ -3,9 +3,9 @@
 {% block content %}
 <h1>Project Form</h1>
 
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    <!-- as_p will wrap each label+form in a p tage to help tidy it up -->
+    <!-- as_p will wrap each label+form in a p tag to help tidy it up -->
     {{ form.as_p }}
     <input type="submit" value="Submit">
 </form>
