--- a/devsearch/projects/templates/projects/projects.html
+++ b/devsearch/projects/templates/projects/projects.html
@@ -1,36 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-    <body>
-        {% extends 'main.html' %}
+{% extends 'main.html' %}
 
-            {% block content %}
-                <h1>Projects List</h1>
-                
-                <table border=1>
-                    <tr>
-                        <th>ID</th>
-                        <th>Project Name</th>
-                        <th>Positive Votes</th>
-                        <th>Ratio</th>
-                        <th>Created</th>
-                    </tr>
-                    
-                    {% for project in projects %}
-                        <tr>
-                            <td><a href="{% url 'project' project.id %}"> {{ project.title }}</a></td>
-                            <td>{{ project.vote_totals }}</td>
-                            <td>{{ project.vote_ratio }}%</td>
-                            <td>{{ project.created }}</td>
-                            <td><a href="{% url 'update-project' project.id %}">Edit</a></td>
-                            <td><a href="{% url 'delete-project' project.id %}">Delete</a></td>
-                        </tr>
-                    {% endfor %}                    
+{% block content %}
+    <table border=1>       
+        {% for project in projects %}
+            <tr>
+                <td><a href="{% url 'project' project.id %}"> {{ project.title }}</a></td>
+                <td>{{ project.vote_totals }}</td>
+                <td>{{ project.vote_ratio }}%</td>
+                <td>{{ project.created }}</td>
+                <td><a href="{% url 'update-project' project.id %}">Edit</a></td>
+                <td><a href="{% url 'delete-project' project.id %}">Delete</a></td>
+            </tr>
+        {% endfor %}                    
 
-                </table>
+    </table>
         
                 
 
-                <!-- Main Section -->
+<!-- Main Section -->
   <main class="projects">
     <section class="hero-section text-center">
       <div class="container container--narrow">
@@ -55,173 +42,44 @@
     <section class="projectsList">
       <div class="container">
         <div class="grid grid--three">
-          <div class="column">
-            <div class="card project">
-              <a href="single-project.html" class="project">
-                <img class="project__thumbnail" src="images/project-a.png" alt="project thumbnail" />
-                <div class="card__body">
-                  <h3 class="project__title">Yoga Studio Landing Page Website and Design</h3>
-                  <p><a class="project__author" href="profile.html">By Dennis Ivanov</a></p>
-                  <p class="project--rating">
-                    <span style="font-weight: bold;">98%</span> Postitive
-                    Feedback (72 Votes)
-                  </p>
-                  <div class="project__tags">
-                    <span class="tag tag--pill tag--main">
-                      <small>NextJS</small>
-                    </span>
-                    <span class="tag tag--pill tag--main">
-                      <small>GraphQL</small>
-                    </span>
-                    <span class="tag tag--pill tag--main">
-                      <small>TypeScript</small>
-                    </span>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
 
-          <div class="column">
-            <div class="card project">
-              <a href="single-project.html" class="project">
-                <img class="project__thumbnail" src="images/project-b.png" alt="project thumbnail" />
-                <div class="card__body">
-                  <h3 class="project__title">DevSearch UI Design</h3>
-                  <p><a class="project__author" href="profile.html">By Shahriar P. Shuvo</a></p>
-                  <p class="project--rating">
-                    <span style="font-weight: bold;">92%</span> Postitive
-                    Feedback (62 Votes)
-                  </p>
-                  <div class="project__tags">
-                    <span class="tag tag--pill tag--main">
-                      <small>NextJS</small>
-                    </span>
-                    <span class="tag tag--pill tag--main">
-                      <small>GraphQL</small>
-                    </span>
-                    <span class="tag tag--pill tag--main">
-                      <small>TypeScript</small>
-                    </span>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
+            {% for project in projects %}
 
-          <div class="column">
-            <div class="card project">
-              <a href="single-project.html" class="project">
-                <img class="project__thumbnail" src="images/project-c.png" alt="project thumbnail" />
-                <div class="card__body">
-                  <h3 class="project__title">Another Landing Page</h3>
-                  <p><a class="project__author" href="profile.html">By Dennis Ivanov</a></p>
-                  <p class="project--rating">
-                    <span style="font-weight: bold;">36%</span> Postitive
-                    Feedback (18 Votes)
-                  </p>
-                  <div class="project__tags">
-                    <span class="tag tag--pill tag--main">
-                      <small>NextJS</small>
-                    </span>
-                    <span class="tag tag--pill tag--main">
-                      <small>GraphQL</small>
-                    </span>
-                    <span class="tag tag--pill tag--main">
-                      <small>TypeScript</small>
-                    </span>
-                  </div>
+                <div class="column">
+                    <div class="card project">
+                        <a href="single-project.html" class="project">
+                            <img class="project__thumbnail" src="images/project-a.png" alt="project thumbnail" />
+                            <div class="card__body">
+                            <h3 class="project__title">{{ project.title }}</h3>
+                            <p><a class="project__author" href="profile.html">By Dennis Ivanov</a></p>
+                            <p class="project--rating">
+                                <span style="font-weight: bold;">98%</span> Postitive
+                                Feedback (72 Votes)
+                            </p>
+                            <div class="project__tags">
+                                <span class="tag tag--pill tag--main">
+                                <small>NextJS</small>
+                                </span>
+                                <span class="tag tag--pill tag--main">
+                                <small>GraphQL</small>
+                                </span>
+                                <span class="tag tag--pill tag--main">
+                                <small>TypeScript</small>
+                                </span>
+                            </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
-              </a>
-            </div>
-          </div>
+            {% endfor %}
 
-          <div class="column">
-            <div class="card project">
-              <a href="single-project.html" class="project">
-                <img class="project__thumbnail" src="images/project-a.png" alt="project thumbnail" />
-                <div class="card__body">
-                  <h3 class="project__title">Yoga Studio Landing Page Website and Design</h3>
-                  <p><a class="project__author" href="profile.html">By Dennis Ivanov</a></p>
-                  <p class="project--rating">
-                    <span style="font-weight: bold;">98%</span> Postitive
-                    Feedback (72 Votes)
-                  </p>
-                  <div class="project__tags">
-                    <span class="tag tag--pill tag--main">
-                      <small>NextJS</small>
-                    </span>
-                    <span class="tag tag--pill tag--main">
-                      <small>GraphQL</small>
-                    </span>
-                    <span class="tag tag--pill tag--main">
-                      <small>TypeScript</small>
-                    </span>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="column">
-            <div class="card project">
-              <a href="single-project.html" class="project">
-                <img class="project__thumbnail" src="images/project-b.png" alt="project thumbnail" />
-                <div class="card__body">
-                  <h3 class="project__title">DevSearch UI Design</h3>
-                  <p><a class="project__author" href="profile.html">By Shahriar P. Shuvo</a></p>
-                  <p class="project--rating">
-                    <span style="font-weight: bold;">92%</span> Postitive
-                    Feedback (62 Votes)
-                  </p>
-                  <div class="project__tags">
-                    <span class="tag tag--pill tag--main">
-                      <small>NextJS</small>
-                    </span>
-                    <span class="tag tag--pill tag--main">
-                      <small>GraphQL</small>
-                    </span>
-                    <span class="tag tag--pill tag--main">
-                      <small>TypeScript</small>
-                    </span>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="column">
-            <div class="card project">
-              <a href="single-project.html" class="project">
-                <img class="project__thumbnail" src="images/project-c.png" alt="project thumbnail" />
-                <div class="card__body">
-                  <h3 class="project__title">Another Landing Page</h3>
-                  <p><a class="project__author" href="profile.html">By Dennis Ivanov</a></p>
-                  <p class="project--rating">
-                    <span style="font-weight: bold;">36%</span> Postitive
-                    Feedback (18 Votes)
-                  </p>
-                  <div class="project__tags">
-                    <span class="tag tag--pill tag--main">
-                      <small>NextJS</small>
-                    </span>
-                    <span class="tag tag--pill tag--main">
-                      <small>GraphQL</small>
-                    </span>
-                    <span class="tag tag--pill tag--main">
-                      <small>TypeScript</small>
-                    </span>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
+        </div>
+            
+          
 
         </div>
       </div>
     </section>
   </main>
 
-        {% endblock %}
-    </body>
-</html>
+{% endblock %}
