--- a/devsearch/projects/templates/projects/projects.html
+++ b/devsearch/projects/templates/projects/projects.html
@@ -1,21 +1,6 @@
 {% extends 'main.html' %}
 
 {% block content %}
-    <table border=1>       
-        {% for project in projects %}
-            <tr>
-                <td><a href="{% url 'project' project.id %}"> {{ project.title }}</a></td>
-                <td>{{ project.vote_totals }}</td>
-                <td>{{ project.vote_ratio }}%</td>
-                <td>{{ project.created }}</td>
-                <td><a href="{% url 'update-project' project.id %}">Edit</a></td>
-                <td><a href="{% url 'delete-project' project.id %}">Delete</a></td>
-            </tr>
-        {% endfor %}                    
-
-    </table>
-        
-                
 
 <!-- Main Section -->
   <main class="projects">
@@ -47,25 +32,21 @@
 
                 <div class="column">
                     <div class="card project">
-                        <a href="single-project.html" class="project">
-                            <img class="project__thumbnail" src="images/project-a.png" alt="project thumbnail" />
+                        <a href="{% url 'project' project.id %}" class="project">
+                            <img class="project__thumbnail" src={{ project.featured_image.url }} alt="project thumbnail" />
                             <div class="card__body">
                             <h3 class="project__title">{{ project.title }}</h3>
-                            <p><a class="project__author" href="profile.html">By Dennis Ivanov</a></p>
+                            <p><a class="project__author" href="{% url 'project' project.id %}">By Dennis Ivanov</a></p>
                             <p class="project--rating">
-                                <span style="font-weight: bold;">98%</span> Postitive
-                                Feedback (72 Votes)
+                                <span style="font-weight: bold;">{{ project.vote_ratio }}%</span> Postitive
+                                Feedback ({{ project.vote_totals }}) Vote{{ project.vote_totals|pluralize:"s" }}
                             </p>
                             <div class="project__tags">
+                              {% for tag in project.tags.all %}
                                 <span class="tag tag--pill tag--main">
-                                <small>NextJS</small>
+                                    <small>{{tag}}</small>
                                 </span>
-                                <span class="tag tag--pill tag--main">
-                                <small>GraphQL</small>
-                                </span>
-                                <span class="tag tag--pill tag--main">
-                                <small>TypeScript</small>
-                                </span>
+                              {% endfor %}
                             </div>
                             </div>
                         </a>
