--- a/devsearch/projects/templates/projects/projects.html
+++ b/devsearch/projects/templates/projects/projects.html
@@ -42,9 +42,9 @@
                                 Feedback ({{ project.vote_totals }}) Vote{{ project.vote_totals|pluralize:"s" }}
                             </p>
                             <div class="project__tags">
-                              {% for tag in project.tags.all %}
+                              {% for tag in project.tag.all %}
                                 <span class="tag tag--pill tag--main">
-                                    <small>{{tag}}</small>
+                                    <small>{{ tag }}</small>
                                 </span>
                               {% endfor %}
                             </div>
