--- a/devsearch/projects/templates/projects/project.html
+++ b/devsearch/projects/templates/projects/project.html
@@ -1,26 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
-    <body>
-        {% extends 'main.html' %}
+{% extends 'main.html' %}
 
-            {% block content %}
 
-                <img src={{ project_obj.featured_image.url }}>
+{% block content %}
 
-                <h1>Title: {{ project_obj.title }}</h1>
-                <H2>Date Created: {{ project_obj.created }}</H2>
-            
-                {% for linked_tag in tag %}
-                    <span>{{ linked_tag }}</span>
-                {% endfor %}
-            
-            {% endblock %}
+<!-- Main Section -->
+<main class="singleProject my-md">
+    <div class="container">
+        <div class="layout">
+            <div class="column column--1of3">
+                <h3 class="singleProject__subtitle">Tools & Stacks</h3>
+                <div class="singleProject__toolStack">
+                    {% for tag in project.tags.all %}
+                    <span class="tag tag--pill tag--sub tag--lg">
+                        <small>{{tag}}</small>
+                    </span>
+                    {% endfor %}
 
-    </body>
-</html>
+                </div>
+
+                {% if project.source_link %}
+                <a class="singleProject__liveLink" href="{{project.source_link}}" target="_blank"><i
+                        class="im im-external-link"></i>Source Code
+                </a>
+                {% endif %}
+
+                {% if project.demo_link %}
+                <a class="singleProject__liveLink" href="{{project.source_link}}" target="_blank"><i
+                        class="im im-external-link"></i>Live Demo
+                </a>
+                {% endif %}
+
+            </div>
+            <div class="column column--2of3">
+                <img class="singleProject__preview" src="{{ project.featured_image.url }}" alt="portfolio thumbnail" />
+                <a href="{% url 'projects' %}" class="singleProject__developer">{{project.owner.name}}</a>
+                <h2 class="singleProject__title">{{project.title}}</h2>
+                <h3 class="singleProject__subtitle">About the Project</h3>
+                <div class="singleProject__info">
+                    {{project.description}}
+                </div>
+                <div class="comments">
+                    <h3 class="singleProject__subtitle">Feedback</h3>
+                    <h5 class="project--rating">
+                        {{project.vote_ratio}}% Positive Feedback ({{project.vote_total}}
+                        Vote{{project.vote_total|pluralize:"s"}})
+                    </h5>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</main>
+
+{% endblock %}
