--- a/devsearch/users/templates/users/user-profile.html
+++ b/devsearch/users/templates/users/user-profile.html
@@ -1,5 +1,7 @@
 {% extends 'main.html' %}
 
+{% load static %}
+
 {% block content %}
 
 <main class="profile my-md">
@@ -8,7 +10,7 @@
             <div class="column column--1of3">
                 <div class="card text-center">
                     <div class="card__body dev">
-                        <img class="avatar avatar--xl" src="{{ profile.profile_image }}" />
+                        <img class="avatar avatar--xl" src="{{ profile.profile_image.url }}" />
                         <h2 class="dev__name">{{ profile.name }}</h2>
                         <p class="dev__title">{{ profile.short_intro }}</p>
                         <p class="dev__location">Based in {{ profile.location }}</p>
@@ -87,7 +89,7 @@
                         <div class="column">
                             <div class="card project">
                                 <a href="{% url 'project' project.id %}" class="project">
-                                    <img class="project__thumbnail" src="{{project.imageURL}}"
+                                    <img class="project__thumbnail" src="{{ project.featured_image.url }}"
                                         alt="project thumbnail" />
                                     <div class="card__body">
                                         <h3 class="project__title">{{ project.title }}</h3>
