--- a/devsearch/templates/main.html
+++ b/devsearch/templates/main.html
@@ -21,6 +21,17 @@
     <body>
         {% include "navbar.html" %}
         
+        {% if messages %}
+            <ul class="messages">
+            {% for message in messages %}
+                <li{% if message.tags %} 
+                        class="{{ message.tags }}"> {{ message }}
+                   {% endif %}
+                </li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+
         {% block content %}
 
         {% endblock content %}
