--- a/devsearch/users/templates/users/profiles.html
+++ b/devsearch/users/templates/users/profiles.html
@@ -38,8 +38,8 @@
                             <div class="dev__profile">
                                 <img class="avatar avatar--md" src="{{ profile.imageURL }}" alt="image" />
                                 <div class="dev__meta">
-                                    <h3>{{ profile.name }}</h3>
-                                    <h5>{{ profile.short_intro|slice:"60" }}</h5>
+                                    <h3>{{ profile.name|title }}</h3>
+                                    <h5>{{ profile.short_intro|slice:"60"|title }}</h5>
                                 </div>
                             </div>
                             <p class="dev__info">{{ profile.bio|slice:"150" }}</p>
