--- a/devsearch/users/templates/users/login_register.html
+++ b/devsearch/users/templates/users/login_register.html
@@ -2,11 +2,24 @@
 
 {% block content %}
 
-<form action="{% url 'login' %}" method="POST">
-    {% csrf_token %}
-    <input type="text" name="username" placeholder="Enter Username"></input>
-    <input type="password" name="password" placeholder="Enter Password"></input>
-    <input type="submit" value="Login">
-</form>
+{% if page == "register" %}
+    <h1>Register User</h1>
+
+    <form action="{% url 'register' %}" method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Register User" action=>
+    </form>
+
+    <p>Already have an account. <a href="{% url 'login' %}">Click here</a> to login.</p>
+{% else %}
+    <form action="{% url 'login' %}" method="POST">
+        {% csrf_token %}
+        <input type="text" name="username" placeholder="Enter Username"></input>
+        <input type="password" name="password" placeholder="Enter Password"></input>
+        <input type="submit" value="Login">
+    </form>
+    <p>Don't have an account. <a href="{% url 'register' %}">Click here</a> to register for an an account.</p>
+{% endif %}
 
 {% endblock content %}
