--- a/devsearch/templates/main.html
+++ b/devsearch/templates/main.html
@@ -15,26 +15,26 @@
     <link rel="stylesheet" href="{% static 'uikit/styles/uikit.css' %}" />
     <!-- Dev Search UI -->
     <link rel="stylesheet" href="{% static 'styles/app.css' %}" />
-  
     <title>DevSearch - Connect with Developers!</title>
 </head>
     <body>
         {% include "navbar.html" %}
         
         {% if messages %}
-            <ul class="messages">
+            
             {% for message in messages %}
-                <li{% if message.tags %} 
-                        class="{{ message.tags }}"> {{ message }}
-                   {% endif %}
-                </li>
+                <div class="alert  alert--{{ message.tags }}">
+                    <p class="alert__message">{{ message }}</p>
+                    <button class="alert__close">x</button>
+                </div>
             {% endfor %}
-            </ul>
+
         {% endif %}
 
         {% block content %}
 
         {% endblock content %}
-
+    
     </body>
+    <script src="{% static 'uikit/app.js' %}"></script>
 </html>
