--- a/devsearch/users/templates/users/account.html
+++ b/devsearch/users/templates/users/account.html
@@ -12,9 +12,9 @@
             <a class="tag tag--pill tag--main settings__btn" href="{% url 'edit-account' %}"><i class="im im-edit"></i>
               Edit</a>
             <img class="avatar avatar--xl dev__avatar" src="{{profile.imageURL}}" />
-            <h2 class="dev__name">{{profile.name}}</h2>
-            <p class="dev__title">{{profile.short_into}}</p>
-            <p class="dev__location">Based in {{profile.location}}</p>
+            <h2 class="dev__name">{{ profile.name }}</h2>
+            <p class="dev__title">{{ profile.short_into }}</p>
+            <p class="dev__location">Based in {{ profile.location }}</p>
 
             <ul class="dev__social">
               {% if profile.social_github %}
@@ -26,20 +26,20 @@
 
               {% if profile.social_twitter %}
               <li>
-                <a title="Twitter" href="{{profile.social_twitter}}" target="_blank"><i class="im im-twitter"></i></a>
+                <a title="Twitter" href="{{ profile.social_twitter }}" target="_blank"><i class="im im-twitter"></i></a>
               </li>
               {% endif %}
 
               {% if profile.social_linkedin %}
               <li>
-                <a title="LinkedIn" href="{{profile.social_linkedin}}" target="_blank"><i
+                <a title="LinkedIn" href="{{ profile.social_linkedin }}" target="_blank"><i
                     class="im im-linkedin"></i></a>
               </li>
               {% endif %}
 
               {% if profile.social_website %}
               <li>
-                <a title="Personal Website" href="{{profile.social_website}}" target="_blank"><i
+                <a title="Personal Website" href="{{ profile.social_website }}" target="_blank"><i
                     class="im im-globe"></i></a>
               </li>
               {% endif %}
@@ -65,9 +65,9 @@
           {% for skill in skills %}
           <tr>
             <td class="settings__tableInfo">
-              <h4>{{skill.name}}</h4>
+              <h4>{{ skill.name }}</h4>
               <p>
-                {{skill.description}}
+                {{ skill.description }}
               </p>
             </td>
             <td class="settings__tableActions">
@@ -91,10 +91,10 @@
           {% for project in projects %}
           <tr>
             <td class="settings__thumbnail">
-              <a href="{% url 'project' project.id %}"><img src="{{project.imageURL}}" alt="Project Thumbnail" /></a>
+              <a href="{% url 'project' project.id %}"><img src="{{ project.featured_image.url }}" alt="Project Thumbnail" /></a>
             </td>
             <td class="settings__tableInfo">
-              <a href="{% url 'project' project.id %}">{{project.title}}</a>
+              <a href="{% url 'project' project.id %}">{{ project.title }}</a>
               <p>{{project.description|slice:"150"}}</p>
             </td>
             <td class="settings__tableActions">
