--- a/devsearch/users/templates/users/account.html
+++ b/devsearch/users/templates/users/account.html
@@ -11,7 +11,7 @@
           <div class="card__body dev">
             <a class="tag tag--pill tag--main settings__btn" href="{% url 'edit-account' %}"><i class="im im-edit"></i>
               Edit</a>
-            <img class="avatar avatar--xl dev__avatar" src="{{profile.imageURL}}" />
+            <img class="avatar avatar--xl dev__avatar" src="{{profile.profile_image.url}}" />
             <h2 class="dev__name">{{ profile.name }}</h2>
             <p class="dev__title">{{ profile.short_into }}</p>
             <p class="dev__location">Based in {{ profile.location }}</p>
@@ -53,7 +53,7 @@
       <div class="column column--2of3">
         <div class="devInfo">
           <h3 class="devInfo__title">About Me</h3>
-          <p class="devInfo__about">{{profile.bio}}</p>
+          <p class="devInfo__about">{{ profile.bio }}</p>
         </div>
         <div class="settings">
           <h3 class="settings__title">Skills</h3>
@@ -71,9 +71,9 @@
               </p>
             </td>
             <td class="settings__tableActions">
-              <a class="tag tag--pill tag--main settings__btn" href="{% url 'update-skill' skill.id %}"><i
+              <a class="tag tag--pill tag--main settings__btn" href="{% url 'update-skill' %}"><i
                   class="im im-edit"></i> Edit</a>
-              <a class="tag tag--pill tag--main settings__btn" href="{% url 'delete-skill' skill.id %}?next=/account"><i
+              <a class="tag tag--pill tag--main settings__btn" href="{% url 'delete-skill' %}?next=/account"><i
                   class="im im-x-mark-circle-o"></i>
                 Delete</a>
             </td>
